# aiplot-eval

./: .env.example  .gitignore  Makefile  README.md  gamelog_example.json  main.py  pyproject.toml  requirements.txt  run.py  run_script.bat  view.py
code/: __init__.py  config.py  llm.py  scriptwriter 2.0.bak  scriptwriter.py  scriptwriter_3.0.bak  scriptwriter_4.0.bak  scriptwriter_test_bak.py  test_offline_sidestory.py
lib/: drama.py  drama_test_bak.py
output/: gamelog_2025-04-23_175043.json  gamelog_2025-05-27_140500.json  gamelog_2025-05-27_143029.json  gamelog_2025-05-27_144505.json  gamelog_2025-05-27_154829.json  gamelog_2025-05-27_155146.json  gamelog_2025-05-27_162154.json  gamelog_2025-05-27_162347.json  gamelog_2025-05-27_162829.json  gamelog_2025-05-27_163539.json  gamelog_2025-05-27_164148.json  gamelog_2025-05-27_164245.json  gamelog_2025-05-29_210547.json  gamelog_2025-05-29_210653.json  gamelog_2025-05-29_210656.json  gamelog_2025-05-29_210705.json  gamelog_2025-05-29_210706.json  gamelog_2025-05-29_210812.json  gamelog_2025-05-29_210826.json  gamelog_2025-05-29_210829.json  gamelog_2025-05-29_210838.json  gamelog_2025-05-29_210918.json  gamelog_2025-05-29_211055.json  gamelog_2025-05-29_211457.json  gamelog_2025-05-29_211815.json  gamelog_2025-05-29_211915.json  gamelog_2025-05-29_212259.json  gamelog_2025-05-29_212449.json  gamelog_2025-05-29_212609.json  gamelog_2025-05-29_212706.json  gamelog_2025-05-29_213927.json  gamelog_2025-05-29_214121.json  gamelog_2025-05-29_214359.json  gamelog_2025-05-29_214642.json  gamelog_2025-05-31_221827.json  (+13 more)
(+21 files in other folders)
